# yahtzee

./: .gitignore  CLAUDE.md  FEATURES.md  IMPROVEMENTS.md  Makefile  PLAN.md  README.md  README_TESTING.md  ai.py  ai_benchmark.py  dice_tables.py  frontend_adapter.py  game_coordinator.py  game_engine.py  game_log.py  layout.py  main.py  pyproject.toml  score_history.py  screenshot_test.py  screenshot_turnlog.py  settings.py  sounds.py  test_ai.py  test_dice_tables.py  test_frontend_adapter.py  test_game_coordinator.py  test_game_engine.py  test_game_log.py  test_score_history.py  test_settings.py  test_web.py  tui.py  web.py  yahtzee.py
.github/workflows/: test.yml
scripts/: generate_icons.py  screenshot_test.py
static/: dice.css  game.js  manifest.json  service-worker.js  style.css
templates/: game.html  index.html
