[project]
name = "yahtzee"
version = "0.1.0"
description = "A Yahtzee game implementation using pygame"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: integration/quality tests that play many full games (~2 min)",
]

[tool.coverage.run]
source = ["."]
branch = true
omit = ["main.py", "sounds.py", "test_*.py", "ai_benchmark.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__"]
