[project]
name = "yahtzee"
version = "0.1.0"
description = "A Yahtzee game implementation using pygame"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9",
    "pytest-cov>=4.0.0,<7",
    "ruff>=0.4.0,<1",
]
tui = [
    "textual>=0.50.0,<2",
]
web = [
    "flask>=3.0.0,<4",
    "flask-sock>=0.7.0,<1",
]

[project.scripts]
yahtzee = "yahtzee:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["."]
norecursedirs = ["scripts", ".git", ".venv", "__pycache__"]
markers = [
    "slow: integration/quality tests that play many full games (~2 min)",
]

[tool.coverage.run]
source = ["."]
branch = true
omit = ["main.py", "layout.py", "sounds.py", "tui.py", "web.py", "yahtzee.py", "test_*.py", "ai_benchmark.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
